--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <a href="/">Webstudio</a>
+            <a href="/">WebStudio</a>
 
             <ul>
                 <li><a href="/">Studio</a></li>
@@ -16,12 +16,14 @@
                 <li><a href="/">Contacts</a></li>
             </ul>
         </nav>
-            <address>info@devstudio.com</address>
-            <address>+11 (000) 111-11-11</address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111"></a>+11 (000) 111-11-11</li>
+            </ul>
     </header>
     <main>
         <section>
-            <h1>Effective solutions for Your Business</h1>
+            <h1>Effective Solutions for Your Business</h1>
             <button type="button">
                 Order Service
             </button>
@@ -30,22 +32,22 @@
             <h2>ukryta nazwa</h2>
             <ul>
                 <li>
-                    <h4>Strategy</h4>
+                    <h3>Strategy</h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h4>Punctuality</h4>
+                    <h3>Punctuality</h3>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
                 <li>
-                    <h4>Diligence</h4>
+                    <h3>Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                     </p>
                 </li>
                 <li>
-                    <h4>Technologies</h4>
+                    <h3>Technologies</h3>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                     </p>
                     
@@ -53,13 +55,13 @@
             </ul>
         </section>
         <section>
-            <h2>What Are We Doing</h2>
+            <h2>What are we doing</h2>
             <ul>
-                <li><img src="images/img1.jpg" alt="iMac" width="360" height="300">
+                <li><img src="./images/img1.jpg" alt="iMac" width="360" height="300">
                 </li>
-                <li><img src="images/img2.jpg" alt="Phones" width="360" height="300">
+                <li><img src="./images/img2.jpg" alt="Phones" width="360" height="300">
                 </li>
-                <li><img src="images/img3.jpg" alt="hand with phone" width="360" height="300">
+                <li><img src="./images/img3.jpg" alt="hand with phone" width="360" height="300">
                 </li>
             </ul>
         </section>
@@ -68,29 +70,29 @@
             <ul>
                 <li>
                     <figure>
-                        <img src="images/img_person1.jpg" alt="Man1" width="264" height="260">
-                        <strong><br>Mark Guerrero</strong>
+                        <img src="./images/img_person1.jpg" alt="Man1" width="264" height="260">
+                        <h3>Mark Guerrero</h3>
                         <p>Product Designer</p>
                         </figure>
                 </li>
                 <li>
                     <figure>
-                        <img src="images/img_person2.jpg" alt="Man2" width="264" height="260">
-                        <strong><br>Tom Ford</strong>
+                        <img src="./images/img_person2.jpg" alt="Man2" width="264" height="260">
+                        <h3>Tom Ford</h3>
                         <p>Frondend Developer</p>
                     </figure>
                 </li>
                 <li>
                     <figure>
-                        <img src="images/img_person3.jpg" alt="Woman1" width="264" height="260">
-                        <strong><br>Camila Garcia</strong>
+                        <img src="./images/img_person3.jpg" alt="Woman1" width="264" height="260">
+                        <h3>Camila Garcia</h3>
                         <p>Marketing</p>
                     </figure>
                 </li>
                 <li>
                     <figure>
-                        <img src="images/img_person4.jpg" alt="Man3" width="264" height="260">
-                        <strong><br>Daniel Wilson</strong>
+                        <img src="./images/img_person4.jpg" alt="Man3" width="264" height="260">
+                        <h3>Daniel Wilson</h3>
                         <p>UI Designer</p>
                     </figure>
                 </li>
@@ -98,7 +100,7 @@
         </section>
     </main>
     <footer>
-        <a href="/">Webstudio</a>
+        <a href="/">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
