--- a/index.html
+++ b/index.html
@@ -7,20 +7,17 @@
 </head>
 <body>
     <header>
-            <nav>
-                <a href="/">WebStudio</a>
+        <nav>
+            <a href="/">WebStudio</a>
 
-                <ul>
-                    <li><a href="/">Studio</a></li>
-                    <li><a href="/">Portfolio</a></li>
-                    <li><a href="/">Contacts</a></li>
-                </ul>
-            
-                <ul>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+110001111111"></a>+11 (000) 111-11-11</li>
-                </ul>
-            </nav>
+            <ul>
+                <li><a href="/">Studio</a></li>
+                <li><a href="/">Portfolio</a></li>
+                <li><a href="/">Contacts</a></li>
+            </ul>
+        </nav>
+            <address><a href="mailto:info@devstudio.com">info@devstudio.com</a></address>
+            <address><a href="tel:+110001111111">+11 (000) 111-11-11</a></address>
     </header>
     <main>
         <section>
