Changed in homework 1.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header>
         <nav>
             <a href="/">WebStudio</a>
+            
 
             <ul>
                 <li><a href="/">Studio</a></li>
@@ -16,8 +17,10 @@
                 <li><a href="/">Contacts</a></li>
             </ul>
         </nav>
-            <address><a href="mailto:info@devstudio.com">info@devstudio.com</a></address>
-            <address><a href="tel:+110001111111">+11 (000) 111-11-11</a></address>
+            <ul>
+                <li><address><a href="mailto:info@devstudio.com">info@devstudio.com</a></address></li>
+                <li><address><a href="tel:+110001111111">+11 (000) 111-11-11</a></address></li>
+            </ul>
     </header>
     <main>
         <section>
