--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
                 <li><a href="/">Contacts</a></li>
             </ul>
         </nav>
-            <ul>
-                <li><address><a href="mailto:info@devstudio.com">info@devstudio.com</a></address></li>
-                <li><address><a href="tel:+110001111111">+11 (000) 111-11-11</a></address></li>
-            </ul>
+            <adress>
+                <ul>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </adress>
     </header>
     <main>
         <section>
